--- a/index.html
+++ b/index.html
@@ -98,32 +98,6 @@ My strengths are a methodological approach to problem solving, flexibility, pass
 
 <!--
 
-Open Reply
-Dates Employed Feb 2010 – Present  Employment Duration8 yrs 8 mos
-LocationRome Area, Italy
-Open Source middleware administrator, I have been involved in the solution design, implementation and management of enterprise architectures based on open source software.
-
-Edit position IT Senior Consultant Valueteam s.p.a
-IT Senior Consultant
-Company NameValueteam s.p.a
-Dates EmployedNov 2008 – Feb 2010  Employment Duration1 yr 4 mos
-LocationRome Area, Italy
-I was responsible for software development of enterprise Java applications, as a senior developer / team leader.
-
-Edit position Senior Java/J2EE Programmer Analyst ICM Italia spa
-Senior Java/J2EE Programmer Analyst
-Company NameICM Italia spa
-Dates Employed2004 – Nov 2008  Employment Duration4 yrs
-LocationRome Area, Italy
-I was responsible for software development of enterprise Java applications, as a senior developer / team leader.
-
-Edit position Java/J2EE Programmer Analyst Ariadne
-Java/J2EE Programmer Analyst
-Company NameAriadne
-Dates Employed2001 – 2004  Employment Duration3 yrs
-LocationMilan Area, Italy
-I was responsible for software development of enterprise Java applications, as a j2ee developer / analyst.
-
 -->
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
@@ -132,45 +106,34 @@ I was responsible for software development of enterprise Java applications, as a
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Consultant</h3>
-              <div class="subheading mb-3">Open Reply - Rome (Italy)</div>
-              <p>Open Source middleware administrator, I have been involved in the solution design, implementation and management of enterprise architectures based on open source software</p>
+              <h3 class="mb-0">Full stack Developer</h3>
+              <div class="subheading mb-3">at Open Reply - Rome (Italy)</div>
+              <p>As Collaborator, I have been involved in the solution design, implementation and management of enterprise architectures based on open source software</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Feb 2010 - Present</span>
+              <span class="text-primary">Nov 2016 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">IT Senior Consultant</h3>
-              <div class="subheading mb-3">Valueteam s.p.a  - Rome (Italy)</div>
-              <p>I was responsible for software development of enterprise Java applications, as a senior developer / team leader.</p>
+              <h3 class="mb-0">Full stack Developer</h3>
+              <div class="subheading mb-3">NEPTA  - Rome (Italy)</div>
+              <p>ToDo...</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Nov 2008 – Feb 2010</span>
+              <span class="text-primary">Jul 2018 – Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Java/J2EE Programmer Analyst</h3>
-              <div class="subheading mb-3">ICM Italia spa - Rome (Italy)</div>
-              <p>I was responsible for software development of enterprise Java applications, as a senior developer / team leader.</p>
+              <h3 class="mb-0">Java Developer</h3>
+              <div class="subheading mb-3">DsTech - Rome (Italy)</div>
+              <p>ToDo...</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Jun 2004 – Nov 2008</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Java/J2EE Programmer Analyst</h3>
-              <div class="subheading mb-3">Ariadne srl - Pavia (Italy)</div>
-              <p>I was responsible for software development of enterprise Java applications, as a j2ee developer / analyst.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2001 – Jun 2004</span>
+              <span class="text-primary">Nov 2016 – Jul 2018</span>
             </div>
           </div>
 
@@ -297,80 +260,7 @@ Dates attended or expected graduation 1992 – 1997
         </div>
       </section>
 
-<!--
 
-Banca Fideuram - GeCo
-ago 2017 – presente
-
-Descrizione progettoAnalisi e sviluppo di interfacce grafiche dell’applicativo GeCO, utilizzato per la gestione di processi critici e le relative soluzioni volte al mantenimento della continuità operativa. Sviluppo di API REST CRUD utilizzando Java ed Hibernate.
-Tecnologie utilizzate: AngularJS, Bootstrap, Java, Spring, Hibernate e JPA.
-Altre attività svolte: analisi dei requisiti.
-
-Modifica il progetto FCA - PriceWatch
-Nome progettoFCA - PriceWatch
-giu 2017 – presente
-
-Descrizione progettoAnalysis and development of a server-side java application, able to manage the subscription and sending of heterogeneous notifications to end users of the portals of FCA dealers, powered by a scheduled batch that downloads the updated data from the individual portals. Development of functions for data analysis and REST APIs that communicate with an installation of GAIA Reply Notification Gateway which takes care of sending active notifications to end users. Development of a JavaScript library implemented by the individual portals for managing subscriptions to the notification service that supports the main operating systems and browsers.
-Development of a web console for subscription management, generation of statistics and timely submission of web notifications using Angular4.
-Technologies: Java, Angular4, Spring Batch, Spring Boot, Spring Security, MySQL, MyBatis, JavaScript, Firebase Cloud Messaging, Apple Push Notification.
-
-Altro creatore
-Luigi Corollo
-Modifica il progetto FCA - D-Cube
-Nome progettoFCA - D-Cube
-apr 2017 – presente
-
-Descrizione progettoDeveloping of web console's graphic interfaces of an application that allow geotracking of cars
-during test drives. It consists of a java application that allows route tracking through a web console using Google Maps APIs and an MQTT server (mosquitto) for saving instantaneous positions / speeds during the tests.
-Sviluppo di funzioni volte all’elaborazione di dati riguardanti velocità e percorso effettuato generando un report dettagliato in formato excel. Sviluppo di Macro excel per la creazione di tabelle e active chart.
-Technologies : Java, Javascript, AngularJS, Spring Boot, MacroExcel (VBA), MQTT.
-
-Altro creatore
-Luigi Corollo
-Modifica il progetto Banca Fideuram - Modulo Tutela
-Nome progettoBanca Fideuram - Modulo Tutela
-ott 2016 – presente
-
-Descrizione progettoDevelopment of a GWT based web application (client and server side) that is integrated inside the SEI portal owned by Fideuram Bank.The Application show a bank report for a selected customer and suggests bank insurances aiming to prevent lack of incoming in chance of unfortunated events in the future. After a full review of all possible actions , a report suggesting the best way of action is available for download.
-Technologies : jBoss 6,GWT,Spring,Jersey,HighCharts,SqlServer.
-
-Altro creatore
-Luigi Corollo
-Modifica il progetto Wind - BusinessAdvisor
-Nome progettoWind - BusinessAdvisor
-gen 2018 – apr 2018
-
-Descrizione progettoAnalysis and front end development of a StartUp Incubator CMS, based on Drupal 8.
-Technologies: Docker, Drupal 8, PHP 5.7, Backbone, Twig, Bootstrap 4.
-
-Vedi il progetto Wind - BusinessAdvisorVedi progetto
-Modifica il progetto Allianz Bank - MyAllianzBank+
-Nome progettoAllianz Bank - MyAllianzBank+
-ott 2016 – gen 2018
-
-Descrizione progettoBack-End developed to support an iOS client used by Private Bankers through the private net of Allianz Bank. The server is developed using Spring, axis and Hibernate. The main purpose is to integrate different systems in order to give to the app a proper set of data exposed
-in the form of a web API.
-
-Altri creatori
-Luigi Corollo Daniele Mangione
-Modifica il progetto Percassi - SSO
-Nome progettoPercassi - SSO
-ott 2017 – dic 2017
-
-Descrizione progettoSSO system based on Apogeo CAS customization, it integrates a social network login through the external service Gigya. Focus point of this architecture it's the performance of the solution that involves about 3M potential users. I worked as a java developer.
-Technologies : Apogeo CAS, Java, Tomcat 8, Spring Web Flow, Spring MVC, MySql, Spring Batch, Maven.
-
-Altro creatore
-Luigi Corollo
-Modifica il progetto Banca Fideuram - Next
-Nome progettoBanca Fideuram - Next
-ott 2016 – apr 2017
-
-Descrizione progettoDevelopment of a REST API that provides data for a mobile application (iOS).
-The API is meant to be a communication channel between the app and two different systems that share the same data.
-As the app is able to work offline, the API implements a synchronization and export protocol, giving to the final user control over the state of the data among the systems.
-The backend communicates with the other systems by Axis client (consuming SOAP web services).
--->
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
@@ -465,27 +355,7 @@ The backend communicates with the other systems by Axis client (consuming SOAP w
       </section>
 
 <!--
-JBCAA, JBoss Certification Application Amministrator
-Certification DateJan 2012 – Present License 120-007-117
 
-Redhat
-Certification authorityRedhat
-
-Edit certification SCBCD, Sun Certified Business Component Developer for Java J2EE 1.3
-TitleSCBCD, Sun Certified Business Component Developer for Java J2EE 1.3
-Certification Date2007 – Present
-Sun
-Certification authoritySun
-
-Edit certification SCWCD,Sun Certified Web Component Developer for Java J2EE 1.4
-TitleSCWCD,Sun Certified Web Component Developer for Java J2EE 1.4
-Certification Date2006 – Present
-Sun
-Certification authoritySun
-
-Edit certification SCJP,Sun Certified Programmer for Java 2 Platform 1.4
-TitleSCJP,Sun Certified Programmer for Java 2 Platform 1.4
-Certification Date2004 – Present
 -->
       <hr class="m-0">
 
