--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
             <a href="mailto:emanuele.dorazio94@gmail.com">emanuele.dorazio94@gmail.com</a>
           </div>
           <p class="lead mb-5">
-          I started my IT career in 2001, my first experience has been the development of enterprise java applications, then I worked on design of software architecture and on requirements analysis.
+            Sviluppatore Back-end nel team interno di Open Reply. Ho contribuito attivamente allo sviluppo back-end e, all'occorrenza, front-end di webapp in progetti di carattere bancario e commerciale utilizzando tecnologie di livello enterprise
+
+            Ho sviluppato buone capacità di ascolto, volte all'individuazione e all'analisi dei problemi posti, e
+            determinazione nella ricerca di una soluzione attuabile fin da quando a livello amatoriale, per
+            passione, su richiesta di amici e conoscenti, mi impegnavo nella realizzazione di siti web,
+            customizzazione e assemblaggio di computer, nella risoluzione di problematiche di carattere
+            informatico.
+            Durante l' esperienza lavorativa ho potuto maturare inoltre una maggiore disposizione al lavoro in
+            team, diretto al confronto costruttivo e propositivo.
+
+            I started my IT career in 2001, my first experience has been the development of enterprise java applications, then I worked on design of software architecture and on requirements analysis.
 During the last years I worked as open source middleware administrator (apache,jboss, mysql, postgresql,pentaho,alfresco, ...) and as a Technical Project Manager.
 My strengths are a methodological approach to problem solving, flexibility, passion for IT, continuous learning of new technologies.
           </p>
@@ -119,7 +129,7 @@ My strengths are a methodological approach to problem solving, flexibility, pass
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Full stack Developer</h3>
               <div class="subheading mb-3">NEPTA  - Rome (Italy)</div>
-              <p>ToDo...</p>
+              <p>As consultant at Open Reply</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Jul 2018 – Present</span>
@@ -130,7 +140,7 @@ My strengths are a methodological approach to problem solving, flexibility, pass
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Java Developer</h3>
               <div class="subheading mb-3">DsTech - Rome (Italy)</div>
-              <p>ToDo...</p>
+              <p>As consultant at Open Reply</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2016 – Jul 2018</span>
@@ -163,24 +173,24 @@ Dates attended or expected graduation 1992 – 1997
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Università di Pavia</h3>
-              <div class="subheading mb-3">Bachelor of Software Engineering</div>
-              <div>Software Engeneering Department</div>
+              <h3 class="mb-0">La Sapienza</h3>
+              <div class="subheading mb-3">Degree of Computer Science</div>
+              <div>Computer Science Department</div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">1997 – 2002</span>
+              <span class="text-primary">2017 – Ongoing...</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">ITIS "A.Volta", Alessandria</h3>
-              <div class="subheading mb-3">Computer science High School</div>
+              <h3 class="mb-0">Scientifico "Manfredi Azzarita", Roma</h3>
+              <div class="subheading mb-3">High School</div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">1992 – 1997</span>
+              <span class="text-primary">2014</span>
             </div>
           </div>
 
@@ -380,7 +390,7 @@ Dates attended or expected graduation 1992 – 1997
           <ul class="fa-ul mb-0">
             <li>
              <i class="fa-li fa fa-file-pdf"></i>
-             	<a href="#"> download resume in pdf format </a>
+             	<a href="./doc/CV-Europass-DOrazio.pdf"> download as pdf </a>
             </li>
           </ul>
         </div>
