--- a/index.html
+++ b/index.html
@@ -66,26 +66,20 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
+          <span class="text-center d-block d-lg-none">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/photo-slim.jpg" alt="">
+          </span>
           <h1 class="mb-0">Emanuele
             <span class="text-primary">D'Orazio</span>
           </h1>
-          <div class="subheading mb-5">00198 - Rome - Italy
-            <a href="mailto:emanuele.dorazio94@gmail.com">emanuele.dorazio94@gmail.com</a>
+          <div class="subheading mb-5">Full stack Developer
+            <a class="text-lowercase" href="mailto:emanuele.dorazio94@gmail.com">emanuele.dorazio94@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Sviluppatore Back-end nel team interno di Open Reply. Ho contribuito attivamente allo sviluppo back-end e, all'occorrenza, front-end di webapp in progetti di carattere bancario e commerciale utilizzando tecnologie di livello enterprise
-
-            Ho sviluppato buone capacità di ascolto, volte all'individuazione e all'analisi dei problemi posti, e
-            determinazione nella ricerca di una soluzione attuabile fin da quando a livello amatoriale, per
-            passione, su richiesta di amici e conoscenti, mi impegnavo nella realizzazione di siti web,
-            customizzazione e assemblaggio di computer, nella risoluzione di problematiche di carattere
-            informatico.
-            Durante l' esperienza lavorativa ho potuto maturare inoltre una maggiore disposizione al lavoro in
-            team, diretto al confronto costruttivo e propositivo.
-
-            I started my IT career in 2001, my first experience has been the development of enterprise java applications, then I worked on design of software architecture and on requirements analysis.
-During the last years I worked as open source middleware administrator (apache,jboss, mysql, postgresql,pentaho,alfresco, ...) and as a Technical Project Manager.
-My strengths are a methodological approach to problem solving, flexibility, passion for IT, continuous learning of new technologies.
+            I started my IT career in 2016, my first experiences has been the development of enterprise java applications in banking and commercial projects.
+            During my work experience, I was able to develop a greater disposition to work in
+            team, good listening skills, aimed at identifying and analyzing the problems posed, and determination in the search for a viable solution.
+            My strengths are a methodological approach to problem solving, flexibility, passion for IT, continuous learning of new technologies.
           </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/emanuele-d-orazio/">
