--- a/index.html
+++ b/index.html
@@ -149,16 +149,6 @@
 
 <!--
 
-
-Edit education Università di Pavia Reorder education {:name} Università di Pavia
-Università di Pavia
-Degree NameGraduated Field Of StudyComputer Engeneering
-Dates attended or expected graduation 1997 – 2002
-
-Edit education ITIS &quot;A.Volta&quot;, Alessandria Reorder education {:name} ITIS "A.Volta", Alessandria
-ITIS "A.Volta", Alessandria
-Field Of StudyComputer science High School
-Dates attended or expected graduation 1992 – 1997
 -->
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
@@ -323,7 +313,7 @@ Dates attended or expected graduation 1992 – 1997
               Descrizione progettoAnalysis and front end development of a StartUp Incubator CMS, based on Drupal 8.
               <br/>
               Technologies: Docker, Drupal 8, PHP 5.7, Backbone, Twig, Bootstrap 4.
-              <a href="#">See it online</a>
+              <a href="https://www.businessadvisor.it/">See it online</a>
             </p>
           </div>
 
